# validator-schema-excel

./: .example.env  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  compose.yml  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: app.py  backend.py  contract.py  frontend.py
data/: file.xlsx  wrong.xlsx
docs/: backend.md  frontend.md  index.md  schema.md  test.md
search/: search_index.json
tests/: __init__.py  test_app.py  test_integration.py  test_unit.py
